[tool.poetry]
name = "rabbit_helper"
version = "0.1.0"
description = ""
authors = ["vladislav <vladislav.shirobokov@nlogic.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
aio_pika = "^8.2.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
